# Detection-and-Mitigation-of-DDoS

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PROJECT_IMPROVEMENT_PROMPT.md  README.md  THREAT_MODEL.md  config.worker-2.yaml  config.yaml  dashboard.py  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: README.md
docker/coordinator/: Dockerfile
docker/mininet/: Dockerfile
docker/pox/: Dockerfile
docs/: index.md
docs/screenshots/: CHECKLIST.md
models/: pca.joblib  rf.joblib
notebooks/: train_pca_and_rf.py
samples/: attack.pcap  cicddos2019_sample.csv  normal.pcap
scripts/: build_sample_pcaps.py  build_synth_dataset.py  extract_sample.py
src/ddos_sdn/: __init__.py  config.py
src/ddos_sdn/coordinator/: __init__.py  client.py  protocol.py  server.py
src/ddos_sdn/detector/: entropy.py  features.py  ml_detector.py  pca_detector.py  pox_controller.py  telemetry.py
src/ddos_sdn/generators/: benign_traffic.py  random_dst_flood.py  udp_flood.py
src/ddos_sdn/utils/: network.py
tests/: test_coordinator_correlation.py  test_coordinator_protocol.py  test_dashboard.py  test_entropy.py  test_ml_detector.py  test_pca_detector.py  test_pcap_replay.py  test_pox_mitigation.py  test_three_case_smoke.py
