[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ddos_sdn"
version = "0.1.0"
description = "Detection and mitigation of DDoS attacks in Software-Defined Networks (POX/OpenFlow)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "K. Sai Praneeth"},
    {name = "A. Meher Sudhakar"},
]
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "docs/screenshots/legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# pox_controller.py inherits the POX-style `from pox.lib.revent import *`
# pattern from McCauley's upstream scaffolding (Apache-licensed). The
# EventMixin / Event names it pulls in are only valid at runtime under POX;
# ruff can't see them statically. Suppressing F403/F405 only on this file.
"src/ddos_sdn/detector/pox_controller.py" = ["F403", "F405"]
# Tests routinely import names that ruff thinks are unused (pytest fixtures).
"tests/**" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''
/(
    notebooks
  | docs/screenshots/legacy
)/
'''
